fix(bento-grid): title being hard to read on mobile + some more fixes
- Make the icons `absolute` positioned on the top right corner
- Add a `max-width` to the title to avoid it overlapping the icons
- Made all icons be just the symbol, no full logo
- Add a higher resolution for the VSCode, Firefox, Zoom and Telegram screenshots and remove the MacOS buttons from them

--- a/public/assets/css/components/bento.css
+++ b/public/assets/css/components/bento.css
@@ -130,10 +130,14 @@
     height: 32px !important;
     width: initial !important;
     margin: 0 !important;
+    position: absolute;
+    right: 35px;
+    top: 30px;
 }
 
 .Bento-card-carousel-page-title h2 {
     margin: 0;
+    max-width: 85%;
 }
 
 .Bento-card-carousel .Bento-card-carousel-page-image {
